2009-12-30  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Laszlo Gombos.

         [Qt] RenderThemeQt::applyTheme is a misnomer and is suboptimally coded.
        https://bugs.webkit.org/show_bug.cgi?id=33035

        This patch:
        - renames RenderThemeQt::applyTheme to initializeCommonQStyleOptions,
        - extracts the palette initialization code to a separate function in order to
        provide for readable pointer checking and moves this code up in the function to
        allow for future changes to the palette brushes needed for bug 30173,
        - optimizes some of the code in the function for readability, speed and size.
        - fixes some minor style issues

        No new tests because code behavior is not changed.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintButton):
        (WebCore::RenderThemeQt::paintTextField):
        (WebCore::RenderThemeQt::paintMenuList):
        (WebCore::RenderThemeQt::paintMenuListButton):
        (WebCore::initPaletteFromPageClientIfExists):
        (WebCore::RenderThemeQt::initializeCommonQStyleOptions):
        * platform/qt/RenderThemeQt.h:


Canonical link: https://commits.webkit.org/44077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52664 268f45cc-cd09-0410-ab3c-d52691b4dbfc